# fastAPI_zero

./: .coverage  pyproject.toml
fastz/: app.py  schemas.py
tests/: conftest.py  test_app.py
